product calculation added
